[gd_scene load_steps=12 format=3 uid="uid://bf46u508bknk"]

[ext_resource type="Script" path="res://Scripts/dashboard.gd" id="1_jo86t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grsgw"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_x0pfh"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6kdu"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hruqh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.0862745)
shadow_size = 2
shadow_offset = Vector2(-2, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6havp"]
content_margin_left = 16.0
content_margin_top = 0.0
content_margin_right = 16.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6jpg"]
content_margin_left = 16.0
content_margin_top = 0.0
content_margin_right = 16.0
content_margin_bottom = 0.0
bg_color = Color(0.894922, 0.894922, 0.894922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvuwe"]
content_margin_left = 16.0
content_margin_top = 0.0
content_margin_right = 16.0
content_margin_bottom = 0.0
bg_color = Color(0.817521, 0.817521, 0.817521, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbivx"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iccu6"]
bg_color = Color(0.834614, 0.834614, 0.834614, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.370364, 0.370365, 0.370364, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vrtt"]
bg_color = Color(0.557274, 0.743826, 0.969857, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.359069, 0.359069, 0.359069, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jo86t")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.894922, 0.894922, 0.894922, 1)

[node name="CompanyInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 24.0
offset_top = 10.0
offset_right = -24.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_grsgw")

[node name="ViewTitle" type="Label" parent="CompanyInfo"]
layout_mode = 0
offset_left = 22.0
offset_top = 9.0
offset_right = 213.0
offset_bottom = 59.0
text = "Dashboard"
label_settings = SubResource("LabelSettings_x0pfh")

[node name="ColorRect" type="ColorRect" parent="CompanyInfo"]
layout_mode = 2
offset_right = 1488.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.894922, 0.894922, 0.894922, 1)

[node name="CompanyName" type="Label" parent="CompanyInfo"]
layout_mode = 2
offset_left = 1374.0
offset_top = 4.0
offset_right = 1782.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "CompanyName, LLC"
horizontal_alignment = 2

[node name="BusinessType" type="Label" parent="CompanyInfo"]
layout_mode = 2
offset_left = 1319.0
offset_top = 36.0
offset_right = 1781.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0.385493, 0.385492, 0.385492, 1)
theme_override_font_sizes/font_size = 20
text = "BusinessType
"
horizontal_alignment = 2

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 94.0
offset_right = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_unselected_color = Color(0.325441, 0.325441, 0.325441, 1)
theme_override_colors/font_hovered_color = Color(0.230315, 0.230315, 0.230315, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_constants/side_margin = 10
theme_override_font_sizes/font_size = 24
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_b6kdu")
theme_override_styles/panel = SubResource("StyleBoxFlat_hruqh")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_6havp")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_d6jpg")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_fvuwe")
current_tab = 0

[node name="Overview" type="Control" parent="TabContainer"]
layout_direction = 1
layout_mode = 2
metadata/_tab_index = 0

[node name="WeeklySummary" type="Panel" parent="TabContainer/Overview"]
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 523.0
offset_bottom = 348.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qbivx")

[node name="Title" type="Label" parent="TabContainer/Overview/WeeklySummary"]
layout_mode = 2
offset_left = 16.0
offset_top = 7.0
offset_right = 276.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Weekly Summary"

[node name="Revenue" type="Label" parent="TabContainer/Overview/WeeklySummary"]
layout_mode = 0
offset_left = 21.0
offset_top = 72.0
offset_right = 223.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Revenue: $10,000"

[node name="Expenses" type="Label" parent="TabContainer/Overview/WeeklySummary"]
layout_mode = 0
offset_left = 21.0
offset_top = 113.0
offset_right = 223.0
offset_bottom = 147.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Expenses: $0"

[node name="NetProfit" type="Label" parent="TabContainer/Overview/WeeklySummary"]
layout_mode = 0
offset_left = 21.0
offset_top = 153.0
offset_right = 223.0
offset_bottom = 187.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Net Profit: $10,000"

[node name="Pipeline" type="Panel" parent="TabContainer/Overview"]
layout_mode = 2
offset_left = 571.0
offset_top = 48.0
offset_right = 1046.0
offset_bottom = 348.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qbivx")

[node name="Title" type="Label" parent="TabContainer/Overview/Pipeline"]
layout_mode = 2
offset_left = 16.0
offset_top = 7.0
offset_right = 276.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "Pipeline"

[node name="Container" type="VBoxContainer" parent="TabContainer/Overview/Pipeline"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 19.0
offset_top = 66.0
offset_right = -23.0
offset_bottom = 275.0
grow_horizontal = 2
theme_override_constants/separation = 17

[node name="Task" type="Label" parent="TabContainer/Overview/Pipeline/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Task in progress"

[node name="ProgressBar" type="ProgressBar" parent="TabContainer/Overview/Pipeline/Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.180005, 0.180005, 0.180005, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_iccu6")
theme_override_styles/fill = SubResource("StyleBoxFlat_8vrtt")
value = 60.0

[node name="YTDSummary" type="Panel" parent="TabContainer/Overview"]
layout_mode = 2
offset_left = 48.0
offset_top = 397.0
offset_right = 1046.0
offset_bottom = 739.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qbivx")

[node name="Title" type="Label" parent="TabContainer/Overview/YTDSummary"]
layout_mode = 2
offset_left = 16.0
offset_top = 7.0
offset_right = 276.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "YTD Summary"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Overview/YTDSummary"]
layout_mode = 0
offset_left = 20.0
offset_top = 64.0
offset_right = 975.0
offset_bottom = 319.0

[node name="NewsAlerts" type="Panel" parent="TabContainer/Overview"]
layout_mode = 2
offset_left = 1094.0
offset_top = 48.0
offset_right = 1756.0
offset_bottom = 739.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qbivx")

[node name="Title" type="Label" parent="TabContainer/Overview/NewsAlerts"]
layout_mode = 2
offset_left = 16.0
offset_top = 7.0
offset_right = 276.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "News & Alerts"

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Overview/NewsAlerts"]
layout_mode = 0
offset_left = 30.0
offset_top = 74.0
offset_right = 633.0
offset_bottom = 663.0

[node name="Opportunities" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="DirectRequests" type="Panel" parent="TabContainer/Opportunities"]
layout_mode = 0
offset_left = 48.0
offset_top = 54.0
offset_right = 773.0
offset_bottom = 721.0

[node name="RequestsList" type="VBoxContainer" parent="TabContainer/Opportunities/DirectRequests"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -261.5
offset_right = 262.0
offset_bottom = 296.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarketplaceJobs" type="Panel" parent="TabContainer/Opportunities"]
visible = false
layout_mode = 0
offset_left = 1043.0
offset_right = 1083.0
offset_bottom = 40.0
